cmake_minimum_required(VERSION 3.20)

add_subdirectory("container-with-most-water")
add_subdirectory("longest-substring")
add_subdirectory("product-of-array-except-self")
add_subdirectory("reorder-log-files")
add_subdirectory("rotate-image")
add_subdirectory("string-to-integer")
add_subdirectory("trapping-rain-water")